--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@
 # Ignore files opened while pushing but has been saved.
 *.swp
 
-# Ignore extras directory
-*extras/
+# Ignore files
+/gulpfile.js
+
+# Ignore directory
+extras/
